fixed the magnifying glass icon so that it's left-centered in the search box. Adjusted placeholder text to not overlap icon. Now trying to have magnifying icon be responsive in different window sizes by moving within the input container rather than staying static.

--- a/styles.css
+++ b/styles.css
@@ -477,16 +477,27 @@ footer{
   padding: .5em;
 }
 
+.search-container{
+  position: relative;
+}
+
 .search-container svg{
   position: absolute;
+  right: auto;
+  transform: translateY(-50%);
+  left: 2.5rem;
+  bottom: 0;
+  top: 50%;
 }
 
 .search-footer{
   display: none !important;
+ 
 }
 
 #search{
   width: 250px;
+  padding: .2rem 0 .2rem 3rem;
 }
 
 .fa-magnifying-glass{
